Update README with modularity information for Java 16+.